--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -6,7 +6,8 @@ find_package(Catch2 3 REQUIRED)
 
 
 # These tests can use the Catch2-provided main
-add_executable(tests test.cpp)
+add_executable(tests test.cpp
+                Test_Graph/test_Graph.cpp Test_Graph/test_Node.cpp)
 
 
 
