--- a/Libs/CMakeLists.txt
+++ b/Libs/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.24)
 set(CMAKE_CXX_STANDARD 20)
 
 add_library(Libs
-        Graph/Graph.cpp Graph/Node.cpp)
+        Graph/Graph.cpp Graph/Node.cpp Tools/Dijkstra.cpp Tools/Dijkstra.cpp Tools/Dijkstra.h)
